# matchinglib_poselib

./: .dockerignore  .gitignore  .gitmodules  ADAPT  AUTHORS  CMakeLists.txt  Dockerfile  Dockerfile_CUDA  LICENSE  README.md  build_docker_base.sh  build_generateVirtualSequence.sh  build_install_matchinglib_poselib.sh  build_matchinglib_poselib.sh  calc_opt_parameters.py  change_keyp_distr_config.py  change_user_interrupt_config.py  communication.py  connect_and_prepare.sh  corr_pool_eval.py  create_scenes.py  eval_tests_main.py  evaluation_numbers.py  exec_autocalib.py  extract_Rt.py  gen_init_scenes.py  gen_mult_scene_configs.py  gen_rob-test_scene_configs.py  gen_scene_configs.py  initial_setup.sh  main.py  matching-config.cmake  mount_EBS_volume_and_start.txt  prepare_os.sh  refinement_eval.py  retry_test_cases.py  robustness_eval.py  run_docker_base.sh  start_matchinglib_poselib.sh  start_test_cases.py  (+8 more)
generateVirtualSequence/source/: CMakeLists.txt
generateVirtualSequence/source/CMD_GTM_generation/: CMakeLists.txt  main.cpp
generateVirtualSequence/source/CMD_Interface/: CMakeLists.txt  main.cpp  pose_partitioning.cpp  pose_partitioning.h
generateVirtualSequence/source/examples/generateVirtualSequencecmd/: CMakeLists.txt  io_data.h  loadMatches.h  main.cpp  readGTM.h  readPointClouds.h
generateVirtualSequence/source/examples/generateVirtualSequencegui/: MainWindow.h
generateVirtualSequence/source/generateVirtualSequenceLib/: CMakeLists.txt
generateVirtualSequence/source/generateVirtualSequenceLib/include/: base_matcher.h  generateMatches.h  generateSequence.h  getStereoCameraExtr.h  glob_includes.h  helper_funcs.h  imgFeatures.h  io_data.h  nanoflann_utils.h  polygon_helper.h  side_funcs.h
generateVirtualSequence/source/generateVirtualSequenceLib/source/: generateMatches.cpp  generateSequence.cpp  getStereoCameraExtr.cpp  helper_funcs.cpp  imgFeatures.cpp  io_data.cpp  polygon_helper.c  side_funcs.cpp
generateVirtualSequence/source/tests/: CMakeLists.txt
generateVirtualSequence/source/tests/genvirtsequlib-test/: CMakeLists.txt  main.cpp
matchinglib_poselib/source/matchinglib/: CMakeLists.txt
matchinglib_poselib/source/matchinglib/include/: FileHelper.h  PointCloudOperation.hpp  SSE2NEON.hpp  match_statOptFlow.h  ratioMatches_Flann.h  utils.hpp  utils.inl  utils_opticalflow.hpp  vfc.h
matchinglib_poselib/source/matchinglib/similarity_search/: CMakeLists.txt
matchinglib_poselib/source/matchinglib/source/: FileHelper.cpp  correspondences.cpp  cuda_affine_feature.cpp  features.cpp  gms.cpp  match_opticalflow.cpp  match_statOptFlow.cpp  matchers.cpp  matching_structs.cpp  random_numbers.cpp  ratioMatches_Flann.cpp  trees.cpp  vfc.cpp  vfcMatches.cpp
matchinglib_poselib/source/poselib/: CMakeLists.txt
matchinglib_poselib/source/poselib/include/: BA_driver.h  HomographyAlignment.h  imgproj.h
matchinglib_poselib/source/poselib/source/: BA_driver.cpp  HomographyAlignment.cpp  imgproj.c  nanoflannInterface.cpp  pose_estim.cpp  pose_helper.cpp  pose_homography.cpp  pose_linear_refinement.cpp  stereo_pose_refinement.cpp  triangulation.cpp
matchinglib_poselib/source/tests/matchinglib-test/: CMakeLists.txt  glob_includes.h  io_data.cpp  io_data.h  main.cpp
matchinglib_poselib/source/tests/noMatch_poselib-test/: CMakeLists.txt  glob_includes.h  io_data.cpp  io_data.h  loadMatches.h  load_py_ngransac.cpp  load_py_ngransac.hpp  main.cpp
matchinglib_poselib/source/tests/poselib-test/: CMakeLists.txt  argvparser.h  glob_includes.h  io_data.cpp  io_data.h  main.cpp
matchinglib_poselib/source/utils/: CMakeLists.txt
matchinglib_poselib/source/utils/include/: FileHelper.h  matching_structs.h  random_numbers.h  ransac.h  trees.h  utils_common.h  utils_cv.h
source/: CMakeLists.txt
source/CMD_Interface/: CMakeLists.txt  glob_includes.h  main.cpp
source/examples/: CMakeLists.txt
source/examples/generateVirtualSequencecmd/: CMakeLists.txt  argvparser.cpp  loadMatches.h  main.cpp
source/examples/generateVirtualSequencegui/: CMakeLists.txt
source/examples/matchinglibcmd/: CMakeLists.txt  main.cpp
source/examples/matchinglibgui/: CMakeLists.txt
source/generateVirtualSequenceLib/: CMakeLists.txt
source/generateVirtualSequenceLib/include/: PfeInlineQsort.h  base_matcher.h  eval_start.h  generateMatches.h  generateSequence.h  getStereoCameraExtr.h  glob_includes.h  helper_funcs.h  imgFeatures.h  io_data.h  io_helper.h  loadGTMfiles.h  nanoflann_utils.h  polygon_helper.h  readGTM.h
source/generateVirtualSequenceLib/source/: base_matcher.cpp  eval_start.cpp  generateMatches.cpp  generateSequence.cpp  getStereoCameraExtr.cpp  helper_funcs.cpp  imgFeatures.cpp  io_data.cpp  loadGTMfiles.cpp  polygon_helper.c  side_funcs.cpp
source/matchinglib/: CMakeLists.txt
source/matchinglib/include/: PfeInlineQsort.h  correspondences.h  features.h  match_statOptFlow.h  matchers.h  matchinglib.h  matchinglib_correspondences.h  matchinglib_imagefeatures.h  matchinglib_matchers.h  ratioMatches_Flann.h  test.h  utils.hpp  utils.inl  utils_opticalflow.hpp  vfcMatches.h
source/matchinglib/similarity_search/: CMakeLists.txt
source/matchinglib/source/: correspondences.cpp  features.cpp  gms.cpp  match_opticalflow.cpp  match_statOptFlow.cpp  matchers.cpp  ratioMatches_Flann.cpp  test.cpp  vfc.cpp  vfcMatches.cpp
source/poselib/: CMakeLists.txt
source/poselib/include/: BA_driver.h  HomographyAlignment.h  imgproj.h  pose_estim.h  pose_helper.h  pose_homography.h
source/poselib/include/arrsac/: arrsac.h  (+2 more)
source/poselib/source/: BA_driver.cpp  HomographyAlignment.cpp  nanoflannInterface.cpp  pose_estim.cpp  pose_helper.cpp  pose_homography.cpp  pose_linear_refinement.cpp  stereo_pose_refinement.cpp
source/tests/: CMakeLists.txt
source/tests/genvirtsequlib-test/: dirent.h  main.cpp
source/tests/matchinglib-test/: CMakeLists.txt  argvparser.h  dirent.h  io_data.cpp  main.cpp
source/tests/noMatch_poselib-test/: CMakeLists.txt  io_data.cpp  io_data.h  loadMatches.h  main.cpp
source/tests/poselib-test/: CMakeLists.txt  glob_includes.h  io_data.cpp  main.cpp
(+512 files in other folders)
